--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+<head>  
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -28,17 +28,18 @@
 
   <!-- Beginning main -->
   <main id="maincontent">
-    <!-- Beginning map -->
+    <h1 id="restaurant-name"></h1>
+      <img id="restaurant-img">
+
+    <!-- Beginning restaurant -->
+    <section id="restaurant-container">     
+      <p id="restaurant-cuisine"></p>
+      <p id="restaurant-address"></p>
+           <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
     </section>
     <!-- End map -->
-    <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
